--- a/css/style.css
+++ b/css/style.css
@@ -296,16 +296,29 @@ box-shadow: silver 1px 1px 1px;
 .container4-1 {
 	display: flex;
 	width: 100%;
+	height: 100%;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-image: url(../img/bcgimg.png);
+	background-size: cover;
+	background-position: center;
 }
 .client {
-	margin-top: 70px;
+	margin-top:0;
 	background-color: transparent;
 	border: solid 4px silver;
 	border-radius: 50%;
 	overflow: hidden;
+}
+.circles img {
+width: 15px;
+background-color: gray;
+overflow: hidden;
+border-radius: 50%;
+}
+.circles img:first-child {
+background-color: white;
 }
 /*container5*/
 .container5 {
